# darask-paint

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SPEC.md
examples/: gen_icon.rs
src/: app.rs  canvas_view.rs  document.rs  history.rs  icon.rs  io.rs  keymap.rs  main.rs  project.rs  raster.rs  settings.rs  text.rs
src/tools/: brush.rs  eraser.rs  fill.rs  gradient.rs  mod.rs  pen.rs  picker.rs  select.rs  shapes.rs
src/ui/: color_panel.rs  color_wheel.rs  dialogs.rs  history_panel.rs  icons.rs  layers_panel.rs  menu.rs  mod.rs  options_bar.rs  side_panel.rs  status_bar.rs  tab_bar.rs  toolbar.rs
