[package]
name = "darask-paint"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "=0.2.32"
arboard = "3.6.1"
eframe = { version = "0.35.0", default-features = false, features = ["glow", "default_fonts"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }
rfd = "0.17.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
